--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ cycler==0.12.1
 Flask==3.1.0
 Flask-SQLAlchemy==3.1.1
 fonttools==4.55.0
+gunicorn==23.0.0
 itsdangerous==2.2.0
 Jinja2==3.1.4
 kiwisolver==1.4.7
